agregando vistas dinamicas en product detail y carrito

--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -65,6 +65,7 @@
                     <option value="">Elegí</option>
                     <option value="in-sale">En oferta</option>
                     <option value="visited">Últimos agregados</option>
+                    <option value="destacados">Destacados</option>
                 </select>
             </div>
             <div class="control-formulario1">
