--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -75,42 +75,25 @@
         </div>
 
         <section class="recomendados">
-            <article class="recomendado-article a1">
-                <a href="/products/3"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
-                <div class="contenedor-descripcion">
-                    <div>ADIDAS OZWEEGO ORANGE (YOUTH)</div>
-                    <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio-carrito">$ 21.700</div>
-                    <i class="fas fa-arrow-circle-right derarrow"></i>
-                </div>
-            </article>
-            <article class="recomendado-article a2">
-                <a href="/products/2"><img src="/images/puma3.png" alt="PUMA FUTURE RIDER NES"></a>
-                <div class="contenedor-descripcion">
-                    <div>PUMA FUTURE RIDER NES (2020)</div>
-                    <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio-carrito">$ 22.000</div>
-                    <i class="fas fa-arrow-circle-right derarrow"></i>
-                </div>
-            </article>
-            <article class="recomendado-article a3">
-                <a href="/products/4"><img src="/images/nike3.png" alt="NIKE AIR MAX 90 INFRARED (2020)"></a>
-                <div class="contenedor-descripcion">
-                    <div>NIKE AIR MAX 90 INFRARED (2020)</div>
-                    <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio-carrito">$ 21.700</div>
-                    <i class="fas fa-arrow-circle-right derarrow"></i>
-                </div>
-            </article>
-            <article class="recomendado-article a4">
-                <a href="/products//5"><img src="/images/new-balance4.png" alt="NEW BALANCE 1300 LEVI'S (2020)"></a>
-                <div class="contenedor-descripcion">
-                    <div>NEW BALANCE 1300 LEVI'S (2020)</div>
-                    <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio-carrito">$ 22.000</div>
-                    <i class="fas fa-arrow-circle-right derarrow"></i>
-                </div>
-            </article>
+
+            <% for (product of products){ %>
+                <% if (product.category=="destacados") { %>
+                    <article class="recomendado-article a1">
+                        <a href="/products/<%= product.id %> "><img src="/images/<%= product.image %>" alt=<%= product.name %>></a>
+                        <div class="contenedor-descripcion">
+                            <div><%= product.name %></div>
+                            <i class="fas fa-arrow-circle-left izarrow"></i>
+                            <div class="precio-carrito">$ <%= toThousand(product.price) %></div>
+                            <i class="fas fa-arrow-circle-right derarrow"></i>
+                        </div>
+                    </article>
+                   
+                 
+                <% } %>
+                
+                <% } %> 
+
+           
         </section>
 
         <div class="newsletter">
