--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,66 +4,81 @@
 <%- include("../partials/head")%>
 
 <body>
-<%- include("../partials/header")%>
+    <%- include("../partials/header")%>
 
     <main>
-        <div class="login-bar1">
         <h2 class="title">Registrarme</h2>
-        <form action="/register" method="POST" class="register-form">
-            <div class="register-container">
-                <h3 class="datos-personales">DATOS PERSONALES</h3>
-                <div>
-                    <input type="text" name="nombre" placeholder="Nombre..." class="ingreso" required>
-                </div>
-                <div>
-                    <input type="text" name="apellido" placeholder="Apellido..." class="ingreso" required>
-                </div>
-                <div>
-                    <label for="fecha-nacimiento">FECHA DE NACIMIENTO</label>
-                    <input type="date" name="fecha-nacimiento" id="fecha-nacimiento" class="ingreso" required>
-                </div>
-                <div>
-                    <label>GENERO</label>
-                </div>
-                <div class="genero">
-                    <label for="masculino" class="label-sexo">Masculino</label>
-                    <input type="radio" name="sexo" value="masculino" id="masculino" required>
-                    <label for="femenino" class="label-sexo">Femenino</label>
-                    <input type="radio" name="sexo" value="femenino" id="femenino" required>
-                    <label for="otros" class="label-sexo">Otros</label>
-                    <input type="radio" name="sexo" value="otros" id="otros" required>
-                </div>
+        <form action="/" method="POST" class="form">
+            <h3 class="title-register">Datos personales</h3>
+            <div class="control-formulario1">
+                <label for="name">Nombre completo:</label>
+                <input type="text" name="name" id="name" placeholder="Nombre..." class="control2" required
+                    minlength="4" />
             </div>
-            <div class="register-container">
-                <h3 class="info-cuenta">SOBRE TU CUENTA</h3>
-                <input type="email" name="email" placeholder="Email..." class="ingreso" required>
-                <input type="password" name="password" placeholder="Contraseña..." class="ingreso" required>
-                <i class="fas fa-eye-slash"></i>
-                <input type="password" name="password-confirm" placeholder="Confirmar contraseña..." class="ingreso"
-                    required>
-                <i class="fas fa-eye-slash"></i>
+            <div class="control-formulario1">
+                <input type="text" name="surname" id="surname" placeholder="Apellido..." class="control2" required />
+            </div>
+            <div class="control-formulario1">
+                <label for="fecha-nacimiento">Fecha de nacimiento:</label>
+                <input type="date" name="birthday" id="birthday" class="ingreso" required>
+            </div>
+            <div>
+                <label for="gender" class="negrita">Genero</label>
+                <br>
+                <input type="radio" name="gender" id="gender" value="male" />Masculino
+                <input type="radio" name="gender" id="gender" value="female" />Femenino
+                <input type="radio" name="gender" id="gender" value="kids" />Otros
+            </div>
+            <h3 class="title-register1">Sobre tu cuenta</h3>
+            <div class="control-formulario1">
+                <label for="email">Email:</label>
+                <input type="email" name="email" id="email" placeholder="Email..." class="control2" required />
+            </div>
+            <div class="control-formulario1">
+                <label for="password">Contraseña:</label>
+                <input type="password" name="password" id="password" placeholder="Contraseña..." required
+                    class="control2" />
+                <!--<i class="fas fa-eye-slash"></i> -->
+            </div>
+            <div class="control-formulario1">
+                <input type="password" name="check-password" id="check-password" placeholder="Confirmar contraseña..."
+                    required class="control2" />
+                <!--<i class="fas fa-eye-slash"></i> -->
+            </div>
+            <div class="control-formulario1">
+                <label for="image">Imagen del usuario:</label>
+                <input type="file" name="image" accept=".jpg" />
             </div>
             <hr>
-            <div class="register-container-end">
-                <input type="checkbox" name="terminos" value="terminos" id="terminos" required>
-                <label for="terminos">Acepto las politicas de privacidad y los terminos y condiciones</label>
-                <input type="checkbox" name="ofertas" value="ofertas" id="ofertas">
-                <label for="ofertas">Deseo recibir ofertas por email</label>
+            <div class="bottom-register">
+                <input type="checkbox" name="terminos" value="terminos" id="terminos">Acepto las politicas de privacidad
+                y los terminos y condiciones
+            </div>
+            <div class="bottom-register">
+                <input type="checkbox" name="ofertas" value="ofertas" id="ofertas">Deseo recibir ofertas por email
+            </div>
+
+            <div class="register-buttons">
                 <button type="submit" class="submit-button1">Crear cuenta</button>
             </div>
+            <br />
         </form>
-    </div>
+
         <div class="newsletter">
+
             <form action="/" method="POST" class="newsletter">
+
                 <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
                 <div class="control-formulario">
                     <input type="email" name="email" id="email" placeholder="Ingresá tu email" class="control">
                     <button type="submit" class="boton-suscribe">SUSCRIBIRME</button>
                 </div>
             </form>
+
         </div>
     </main>
-    <%- include("../partials/footer")%>  
+
+    <%- include("../partials/footer")%>
 
 
 </body>
