arreglado el crud DELETE

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -62,17 +62,10 @@
                     <a href="/products/<%= producto.id %>/edit"><button type="button"
                             class="boton-edicion">EDITAR</button></a>
 
-<<<<<<< HEAD
                     
-						<form action="/<%= producto.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+						<form action="/products/<%=producto.id %>?_method=DELETE" method="POST" style="display: inline-flex">
 							<button type="submit" class="boton-edicion">ELIMINAR</button>
 						</form>
-=======
-
-                    <form action="/products?_method=DELETE " method="POST" style="display: inline-flex">
-                        <button type="submit" class="boton-edicion">ELIMINAR</button>
-                    </form>
->>>>>>> 0546c906b36612fd1e196e16f2f737071e1eb835
 
                     <div class="enviosgratis">
                         <p class="envios1"><i class="fas fa-shipping-fast"></i>¡ENVIOS SIN CARGO A TODO EL PAÍS!</p>
