--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -23,7 +23,7 @@
 
             <%if (products[i].category =="destacados") { %>
             <article class="recomendado-article a1">
-                <a href="/products/<%= products[i].id %> "><img src="/images/products/<%= products[i].imagenProducto %>"
+                <a href="/products/<%= products[i].id %> "><img src="/images/products/<%= products[i].image %>"
                         alt=<%= products[i].name %>></a>
                 <div class="contenedor-descripcion">
                     <div><%= products[i].name %></div>
@@ -36,8 +36,28 @@
             <% } %>
 
             <% } %>
+        </section>
+        <div class="title">
+            <h2 class="linea"><span>OFERTAS</span></h2>
+        </div>
+        <section class="destacados">
+            <% for( let i = 0; i < products.length; i++ ) { %>
 
+            <%if (products[i].category =="in-sale") { %>
+            <article class="recomendado-article a1">
+                <a href="/products/<%= products[i].id %> "><img src="/images/products/<%= products[i].image %>"
+                        alt=<%= products[i].name %>></a>
+                <div class="contenedor-descripcion">
+                    <div><%= products[i].name %></div>
+                    <i class="fas fa-arrow-circle-left izarrow"></i>
+                    <div class="precio-carrito">$ <%= toThousand(products[i].price) %></div>
+                    <i class="fas fa-arrow-circle-right derarrow"></i>
+                </div>
+            </article>
 
+            <% } %>
+
+            <% } %>
         </section>
 
         <section class="marcas">
