--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -19,8 +19,8 @@
                     required />
             </div>
             <div class="control-formulario1">
-                <label for="imagenProducto">Imagen del producto:</label>
-                <input type="file" name="imagenProducto"  />
+                <label for="image">Imagen del producto:</label>
+                <input type="file" name="image"  />
             </div>
             <div>
                 <label for="gender" class="negrita">Genero</label>
