--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -79,7 +79,7 @@
             <% for (product of products){ %>
             <% if (product.category=="destacados") { %>
             <article class="recomendado-article a1">
-                <a href="/products/<%= product.id %> "><img src="/images/products/<%= product.imagenProducto %>"
+                <a href="/products/<%= product.id %> "><img src="/images/products/<%= product.image %>"
                         alt=<%= product.name %>></a>
                 <div class="contenedor-descripcion">
                     <div><%= product.name %></div>
