--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -11,12 +11,12 @@
         <form action="/" method="POST" class="form">
             <h3 class="title-register">Datos personales</h3>
             <div class="control-formulario1">
-                <label for="name">Nombre completo:</label>
-                <input type="text" name="name" id="name" placeholder="Nombre..." class="control2" required
+                <label for="firstName">Nombre completo:</label>
+                <input type="text" name="firstName" id="firstName" placeholder="Nombre..." class="control2" required
                     minlength="4" />
             </div>
             <div class="control-formulario1">
-                <input type="text" name="surname" id="surname" placeholder="Apellido..." class="control2" required />
+                <input type="text" name="lastName" id="lastName" placeholder="Apellido..." class="control2" required />
             </div>
             <div class="control-formulario1">
                 <label for="fecha-nacimiento">Fecha de nacimiento:</label>
