--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -21,7 +21,7 @@
             </div>
             <div class="control-formulario1">
                 <label for="imagen">Imagen del producto:</label>
-                <input type="file" name="imagenProducto" />
+                <input type="file" name="image" />
             </div>
             <div>
                 <label for="gender" class="negrita">Genero</label>
