--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
                 <a href="/products/productCart"><i class="fas fa-shopping-cart"></i></a>
                 <a href="/"><i class="fas fa-share-alt-square"></i></a>
             </div>
-            <form action="/products/productDetail" method="GET" class="search-form">
+            <form action="/search" method="GET" class="search-form">
                 <input type="text" name="search" placeholder="¿Qué estás buscando?" class="campo-busqueda">
                 <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
             </form>
