--- a/src/views/products/productAdd.ejs
+++ b/src/views/products/productAdd.ejs
@@ -70,7 +70,7 @@
             </div>
             <div class="control-formulario1">
                 <label for="price">Precio:</label>
-                <input type="number" name="price" id="price" placeholder="$9.999" class="control1" required
+                <input type="number" name="price" id="price" placeholder="9999" class="control1" required
                      />
             </div>
             <div class="control-formulario1">
